[gd_scene load_steps=25 format=2]

[ext_resource path="res://Menu/startmenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Menu/New Project.png" type="Texture" id=3]
[ext_resource path="res://Menu/startmenu.theme" type="Theme" id=4]
[ext_resource path="res://09ba63764e3e37674b8f5502b216acd4.png" type="Texture" id=5]
[ext_resource path="res://Menu/Background.gd" type="Script" id=6]
[ext_resource path="res://light.png" type="Texture" id=7]
[ext_resource path="res://Menu.tres" type="Animation" id=8]
[ext_resource path="res://Sound/A_Little_Pirate_-_Menu_v2.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sound/SeaGulls.ogg" type="AudioStream" id=10]
[ext_resource path="res://Menu/optionmenu.theme" type="Theme" id=11]
[ext_resource path="res://Menu/Lato-Light.ttf" type="DynamicFontData" id=12]

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform vec2 tiled_factor = vec2(10.0, 5.0);
uniform float aspect_ratio = 0.5;


uniform vec2 time_scale = vec2(1.0, 1.0);
uniform vec2 offset_scale = vec2(2.0, 2.0);
uniform vec2 amplitude = vec2(0.05, 0.1);

void fragment() {
	vec2 tiled_uvs = UV * tiled_factor;
	tiled_uvs.y *= aspect_ratio;
	
	vec2 waves_uv_offset;
	waves_uv_offset.x = cos(TIME * time_scale.x + (tiled_uvs.x + tiled_uvs.y) * offset_scale.x);
	waves_uv_offset.y = sin(TIME * time_scale.y + (tiled_uvs.x + tiled_uvs.y) * offset_scale.y);
	
	COLOR = texture(TEXTURE, tiled_uvs + waves_uv_offset * amplitude);
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/tiled_factor = Vector2( 14, 14 )
shader_param/aspect_ratio = 0.701971
shader_param/time_scale = Vector2( 1, 0.6 )
shader_param/offset_scale = Vector2( 1, 0.5 )
shader_param/amplitude = Vector2( 0.07, 0.12 )

[sub_resource type="InputEventAction" id=2]
action = "start"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "settings"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "quit"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 64
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu2/SettingsContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 72 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Light2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -883.447, 60.6408 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "light"
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Light2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -883.447, 60.6408 ), Vector2( 859.269, 67.5058 ) ]
}

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 848.0 ]
}

[node name="Background" type="Sprite" parent="."]
material = SubResource( 11 )
position = Vector2( 657.5, 370 )
scale = Vector2( 2.587, 1.816 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="Background"]
position = Vector2( -883.447, 60.6408 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
texture_scale = 1.2
energy = 0.7

[node name="Alittlepiratetrans" type="Sprite" parent="."]
position = Vector2( 783, 158 )
scale = Vector2( 0.66125, 0.648 )
texture = ExtResource( 3 )
region_rect = Rect2( 205, 167, 411, 240 )

[node name="Label" type="Label" parent="."]
margin_left = 1050.0
margin_top = 686.0
margin_right = 1337.0
margin_bottom = 735.0
theme = ExtResource( 4 )
text = "Version 1.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 29.0
margin_top = -139.0
margin_right = 429.0
margin_bottom = 261.0
rect_min_size = Vector2( 400, 400 )
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBtn" type="Button" parent="MainMenu"]
margin_right = 400.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../QuitBtn")
focus_neighbour_bottom = NodePath("../SettingsBtn")
size_flags_vertical = 3
shortcut = SubResource( 3 )
text = "Start"

[node name="SettingsBtn" type="Button" parent="MainMenu"]
margin_top = 141.0
margin_right = 400.0
margin_bottom = 258.0
focus_neighbour_top = NodePath("../StartBtn")
focus_neighbour_bottom = NodePath("../QuitBtn")
size_flags_vertical = 3
shortcut = SubResource( 5 )
text = "Settings"

[node name="QuitBtn" type="Button" parent="MainMenu"]
margin_top = 283.0
margin_right = 400.0
margin_bottom = 400.0
focus_neighbour_top = NodePath("../SettingsBtn")
focus_neighbour_bottom = NodePath("../StartBtn")
size_flags_vertical = 3
shortcut = SubResource( 7 )
text = "Quit"

[node name="SettingsMenu" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0352941, 0.0823529, 0.576471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -114.5
margin_top = 74.3548
margin_right = 114.5
margin_bottom = 152.355
custom_fonts/font = SubResource( 8 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu2" type="VBoxContainer" parent="SettingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -200.0
margin_right = 640.0
margin_bottom = 200.0
size_flags_horizontal = 5
theme = ExtResource( 11 )
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/MainMenu2"]
margin_right = 1280.0
margin_bottom = 47.0
custom_constants/separation = 25
alignment = 1

[node name="VideoBtn" type="Button" parent="SettingsMenu/MainMenu2/HBoxContainer"]
margin_right = 410.0
margin_bottom = 47.0
focus_neighbour_left = NodePath("../GameplayBtn")
focus_neighbour_right = NodePath("../AudioBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Video"

[node name="AudioBtn" type="Button" parent="SettingsMenu/MainMenu2/HBoxContainer"]
margin_left = 435.0
margin_right = 845.0
margin_bottom = 47.0
focus_neighbour_left = NodePath("../VideoBtn")
focus_neighbour_right = NodePath("../GameplayBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Audio"

[node name="GameplayBtn" type="Button" parent="SettingsMenu/MainMenu2/HBoxContainer"]
margin_left = 870.0
margin_right = 1280.0
margin_bottom = 47.0
focus_neighbour_left = NodePath("../AudioBtn")
focus_neighbour_right = NodePath("../VideoBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Gameplay"

[node name="SettingsContainer" type="VBoxContainer" parent="SettingsMenu/MainMenu2"]
margin_top = 72.0
margin_right = 1280.0
margin_bottom = 595.0

[node name="VideoSettings" type="GridContainer" parent="SettingsMenu/MainMenu2/SettingsContainer"]
margin_right = 1280.0
margin_bottom = 119.0
rect_min_size = Vector2( 640, 0 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="SettingsMenu/MainMenu2/SettingsContainer/VideoSettings"]
margin_top = 4.0
margin_right = 1016.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Display Mode"

[node name="OptionButton2" type="OptionButton" parent="SettingsMenu/MainMenu2/SettingsContainer/VideoSettings"]
margin_left = 1041.0
margin_right = 1280.0
margin_bottom = 47.0
text = "Windowed"
align = 1
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="SettingsMenu/MainMenu2/SettingsContainer/VideoSettings"]
visible = false
margin_top = 72.0
margin_right = 627.0
margin_bottom = 111.0
size_flags_horizontal = 3
text = "Max FPS"

[node name="HSlider" type="HSlider" parent="SettingsMenu/MainMenu2/SettingsContainer/VideoSettings"]
visible = false
margin_top = 83.0
margin_right = 627.0
margin_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 11
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsMenu/MainMenu2/SettingsContainer/VideoSettings"]
margin_top = 76.0
margin_right = 1016.0
margin_bottom = 115.0
size_flags_horizontal = 3
text = "Vsync"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/MainMenu2/SettingsContainer/VideoSettings"]
margin_left = 1208.0
margin_top = 72.0
margin_right = 1280.0
margin_bottom = 119.0
size_flags_horizontal = 8
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioSettings" type="GridContainer" parent="SettingsMenu/MainMenu2/SettingsContainer"]
margin_top = 123.0
margin_right = 1280.0
margin_bottom = 416.0
rect_min_size = Vector2( 640, 0 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mastervol" type="Label" parent="SettingsMenu/MainMenu2/SettingsContainer/AudioSettings"]
margin_right = 329.0
margin_bottom = 81.0
text = "Master Volume
"

[node name="HSlider" type="HSlider" parent="SettingsMenu/MainMenu2/SettingsContainer/AudioSettings"]
margin_left = 354.0
margin_right = 1280.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="Music_vol" type="Label" parent="SettingsMenu/MainMenu2/SettingsContainer/AudioSettings"]
margin_top = 106.0
margin_right = 329.0
margin_bottom = 187.0
text = "Music Volume
"

[node name="HSlider2" type="HSlider" parent="SettingsMenu/MainMenu2/SettingsContainer/AudioSettings"]
margin_left = 354.0
margin_top = 106.0
margin_right = 1280.0
margin_bottom = 122.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="sfx_vol2" type="Label" parent="SettingsMenu/MainMenu2/SettingsContainer/AudioSettings"]
margin_top = 212.0
margin_right = 329.0
margin_bottom = 293.0
text = "SFx Volume
"

[node name="HSlider3" type="HSlider" parent="SettingsMenu/MainMenu2/SettingsContainer/AudioSettings"]
margin_left = 354.0
margin_top = 212.0
margin_right = 1280.0
margin_bottom = 228.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="ControlsSettings" type="GridContainer" parent="SettingsMenu/MainMenu2/SettingsContainer"]
margin_top = 420.0
margin_right = 1280.0
margin_bottom = 523.0
rect_min_size = Vector2( 640, 0 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsMenu/MainMenu2/SettingsContainer/ControlsSettings"]
margin_right = 627.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Mouse Sensitivity"

[node name="HSlider" type="HSlider" parent="SettingsMenu/MainMenu2/SettingsContainer/ControlsSettings"]
margin_left = 652.0
margin_right = 1279.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.1
value = 0.1

[node name="Mouse_sens_val2" type="Label" parent="SettingsMenu/MainMenu2/SettingsContainer/ControlsSettings"]
margin_top = 64.0
margin_bottom = 103.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Mouse_sens_val" type="Label" parent="SettingsMenu/MainMenu2/SettingsContainer/ControlsSettings"]
margin_left = 1255.0
margin_top = 64.0
margin_right = 1279.0
margin_bottom = 103.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "0"

[node name="ColorRect2" type="ColorRect" parent="SettingsMenu"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -1080.0
margin_right = 306.0
color = Color( 0.0392157, 0.0352941, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SettingsMenu"]
anims/Menu = ExtResource( 8 )
anims/RESET = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "light"
anims/RESET = SubResource( 12 )
anims/light = SubResource( 13 )
anims/settings = ExtResource( 8 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
bus = "Music"

[node name="Seagull" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
bus = "Sfx"

[connection signal="item_rect_changed" from="Background" to="Background" method="calculate_aspect_ratio"]
[connection signal="pressed" from="MainMenu/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="MainMenu/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="MainMenu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="SettingsMenu/MainMenu2/HBoxContainer/VideoBtn" to="." method="_on_VideoBtn_pressed"]
[connection signal="pressed" from="SettingsMenu/MainMenu2/HBoxContainer/AudioBtn" to="." method="_on_AudioBtn_pressed"]
[connection signal="pressed" from="SettingsMenu/MainMenu2/HBoxContainer/GameplayBtn" to="." method="_on_ControlsBtn_pressed"]
[connection signal="item_selected" from="SettingsMenu/MainMenu2/SettingsContainer/VideoSettings/OptionButton2" to="SettingsMenu" method="_on_OptionButton2_item_selected"]
[connection signal="toggled" from="SettingsMenu/MainMenu2/SettingsContainer/VideoSettings/CheckButton" to="SettingsMenu" method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="SettingsMenu/MainMenu2/SettingsContainer/AudioSettings/HSlider" to="SettingsMenu" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/MainMenu2/SettingsContainer/AudioSettings/HSlider2" to="SettingsMenu" method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="SettingsMenu/MainMenu2/SettingsContainer/AudioSettings/HSlider3" to="SettingsMenu" method="_on_HSlider3_value_changed"]
[connection signal="value_changed" from="SettingsMenu/MainMenu2/SettingsContainer/ControlsSettings/HSlider" to="SettingsMenu" method="_on_Mouse_sens_value_changed"]
